--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 			<article class="photosession">
     <div class="photosession__container">
         <div class="photosession__wrapper">
-            <div class="photosession__img-wrap" ><img class="photosession__img" src="assets/img/photosession-img.jpg" alt="photosession"></div>
+            <div class="photosession__img-wrap" >
+                <video class="photosession__img" src="assets/videos/fly.mp4" controls></video>
+            </div>
             <div class="photosession__intro">
                 <h1 data-da=".photosession__wrapper,1279,0" class="photosession__title">Фотосессия в вертолете</h1>
                 <p class="photosession__text">Полет на вертолете это прекрасная возможность получить новые ощущения! А наш замечательный фотограф запечатлит лучшие моменты</p>
@@ -235,7 +237,7 @@
                     <div class="feedback__user-info">
                         <div class="feedback__name">Валерия Антонова</div>
                         <div class="feedback__prof">Арт-директор</div>
-                        <img class="feedback__stars" src="/assets/img/rating-stars.png" alt="5 stars" >
+                        <img class="feedback__stars" src="assets/img/rating-stars.png" alt="5 stars" >
                     </div>
                 </div>
                 <span class="feedback__again">Супер! Я бы заказала съемку снова!</span>
@@ -248,7 +250,7 @@
                     <div class="feedback__user-info">
                         <div class="feedback__name">Виталий Петров</div>
                         <div class="feedback__prof">Фотограф</div>
-                        <img class="feedback__stars" src="/assets/img/rating-stars.png" alt="5 stars" >
+                        <img class="feedback__stars" src="assets/img/rating-stars.png" alt="5 stars" >
                     </div>
                 </div>
                 <span class="feedback__again">Супер! Я бы заказала съемку снова!</span>
@@ -262,7 +264,7 @@
                     <div class="feedback__user-info">
                         <div class="feedback__name">Джим Керри</div>
                         <div class="feedback__prof"></div>
-                        <img class="feedback__stars" src="/assets/img/rating-stars.png" alt="5 stars" >
+                        <img class="feedback__stars" src="assets/img/rating-stars.png" alt="5 stars" >
                     </div>
                 </div>
                 <span class="feedback__again">Супер! Я бы заказала съемку снова!</span>
@@ -287,7 +289,6 @@
             </div>
             <div class="footer__bottom">
                 <div class="footer__botom-inner">
-
                 </div>
                 <div class="footer__copy">
                     <div data-da=".footer__botom-inner,575,0" class="footer__pay pay">
